[project]
name = "beancount-plugins"
version = "0.1.0"
description = "Custom beancount v3 plugins and CSV importers"
requires-python = ">=3.14"
dependencies = [
    "beancount>=3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "pre-commit>=4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
