[project]
name = "beancount-plugins"
version = "0.1.0"
description = "Custom beancount v3 plugins and CSV importers"
requires-python = ">=3.14"
dependencies = [
    "beancount>=3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "pre-commit>=4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",    # missing docstring in public module
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function
    "D104",    # missing docstring in public package
    "D105",    # missing docstring in magic method
    "D106",    # missing docstring in public nested class
    "D107",    # missing docstring in __init__
    "D203",    # blank line before class docstring (conflicts with D211)
    "D212",    # docstring summary on first line (conflicts with D213)
    "COM812",  # missing trailing comma (conflicts with ruff format)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",    # line too long (beancount source in test strings)
    "S101",    # use of assert (pytest idiom)
    "ANN001",  # missing type annotation for argument (fixtures inject)
    "ANN201",  # missing return type annotation (tests don't return)
    "INP001",  # implicit namespace package (tests/ is not a package)
    "PLR2004", # magic value in comparison (expected counts)
]
